MaltProject/src/compilerPackage/MaltParser.java
// $ANTLR 3.5.1 D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g 2023-10-26 19:14:42

	package compilerPackage;
	
	import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class MaltParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCKQUOTE", "BOLD", "C", "CL", 
		"CLASS", "CM", "CODE", "CODEBLOCK", "COMMENT", "DIGIT", "DO", "DOTVAR", 
		"EQ", "EQI", "EQL", "ESC_SEQ", "EX", "EXPONENT", "FLOAT", "FOR", "FORMAT", 
		"FORMATTEXT", "FUN", "G", "GET", "HA", "HEX_DIGIT", "HL", "HRULE", "I", 
		"IMG", "IN", "INTEGER", "IT", "ITBOLD", "L", "LAB", "LCB", "LET", "LETTER", 
		"LINK", "LIST", "LP", "LSB", "OCTAL_ESC", "OLIST", "QU", "R", "RAB", "RCB", 
		"RP", "RSB", "S1TITLE", "S2TITLE", "S3TITLE", "S4TITLE", "S5TITLE", "SE", 
		"SL", "ST", "STRING", "SUBS", "SUPS", "TABLE", "TEXT", "TITLE", "TLIST", 
		"ULIST", "UNICODE_ESC", "US", "VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int BLOCKQUOTE=4;
	public static final int BOLD=5;
	public static final int C=6;
	public static final int CL=7;
	public static final int CLASS=8;
	public static final int CM=9;
	public static final int CODE=10;
	public static final int CODEBLOCK=11;
	public static final int COMMENT=12;
	public static final int DIGIT=13;
	public static final int DO=14;
	public static final int DOTVAR=15;
	public static final int EQ=16;
	public static final int EQI=17;
	public static final int EQL=18;
	public static final int ESC_SEQ=19;
	public static final int EX=20;
	public static final int EXPONENT=21;
	public static final int FLOAT=22;
	public static final int FOR=23;
	public static final int FORMAT=24;
	public static final int FORMATTEXT=25;
	public static final int FUN=26;
	public static final int G=27;
	public static final int GET=28;
	public static final int HA=29;
	public static final int HEX_DIGIT=30;
	public static final int HL=31;
	public static final int HRULE=32;
	public static final int I=33;
	public static final int IMG=34;
	public static final int IN=35;
	public static final int INTEGER=36;
	public static final int IT=37;
	public static final int ITBOLD=38;
	public static final int L=39;
	public static final int LAB=40;
	public static final int LCB=41;
	public static final int LET=42;
	public static final int LETTER=43;
	public static final int LINK=44;
	public static final int LIST=45;
	public static final int LP=46;
	public static final int LSB=47;
	public static final int OCTAL_ESC=48;
	public static final int OLIST=49;
	public static final int QU=50;
	public static final int R=51;
	public static final int RAB=52;
	public static final int RCB=53;
	public static final int RP=54;
	public static final int RSB=55;
	public static final int S1TITLE=56;
	public static final int S2TITLE=57;
	public static final int S3TITLE=58;
	public static final int S4TITLE=59;
	public static final int S5TITLE=60;
	public static final int SE=61;
	public static final int SL=62;
	public static final int ST=63;
	public static final int STRING=64;
	public static final int SUBS=65;
	public static final int SUPS=66;
	public static final int TABLE=67;
	public static final int TEXT=68;
	public static final int TITLE=69;
	public static final int TLIST=70;
	public static final int ULIST=71;
	public static final int UNICODE_ESC=72;
	public static final int US=73;
	public static final int VAR=74;
	public static final int WS=75;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MaltParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MaltParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return MaltParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g"; }



		Handler h;
		
		void initHandler () {
		h = new Handler();
		}



	// $ANTLR start "parseJava"
	// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:31:1: parseJava : ( functionRule[null] | fieldRule[null, null] | classRule | assignRule[null, null] )+ EOF ;
	public final void parseJava() throws RecognitionException {
		initHandler();
		try {
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:33:2: ( ( functionRule[null] | fieldRule[null, null] | classRule | assignRule[null, null] )+ EOF )
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:3: ( functionRule[null] | fieldRule[null, null] | classRule | assignRule[null, null] )+ EOF
			{
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:3: ( functionRule[null] | fieldRule[null, null] | classRule | assignRule[null, null] )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=5;
				switch ( input.LA(1) ) {
				case FUN:
					{
					alt1=1;
					}
					break;
				case BLOCKQUOTE:
				case CODEBLOCK:
				case DOTVAR:
				case FOR:
				case IMG:
				case LINK:
				case LIST:
				case OLIST:
				case S1TITLE:
				case S2TITLE:
				case S3TITLE:
				case S4TITLE:
				case S5TITLE:
				case TABLE:
				case TEXT:
				case TITLE:
				case TLIST:
				case ULIST:
					{
					alt1=2;
					}
					break;
				case VAR:
					{
					switch ( input.LA(2) ) {
					case EQ:
						{
						int LA1_6 = input.LA(3);
						if ( (LA1_6==FORMAT) ) {
							alt1=2;
						}
						else if ( ((LA1_6 >= LP && LA1_6 <= LSB)||LA1_6==STRING||LA1_6==VAR) ) {
							alt1=4;
						}

						}
						break;
					case LP:
						{
						alt1=2;
						}
						break;
					case EQI:
					case EQL:
						{
						alt1=4;
						}
						break;
					}
					}
					break;
				case CLASS:
					{
					alt1=3;
					}
					break;
				}
				switch (alt1) {
				case 1 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:20: functionRule[null]
					{
					pushFollow(FOLLOW_functionRule_in_parseJava59);
					functionRule(null);
					state._fsp--;

					}
					break;
				case 2 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:41: fieldRule[null, null]
					{
					pushFollow(FOLLOW_fieldRule_in_parseJava64);
					fieldRule(null, null);
					state._fsp--;

					}
					break;
				case 3 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:65: classRule
					{
					pushFollow(FOLLOW_classRule_in_parseJava69);
					classRule();
					state._fsp--;

					}
					break;
				case 4 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:34:77: assignRule[null, null]
					{
					pushFollow(FOLLOW_assignRule_in_parseJava73);
					assignRule(null, null);
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_parseJava79); 
			h.printTable();
					System.out.println("    - Ho riconosciuto un documento Malt");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parseJava"



	// $ANTLR start "instrRule"
	// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:40:1: instrRule : ( ( ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule ) SE ) | forRule[null, null] );
	public final void instrRule() throws RecognitionException {
		try {
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:2: ( ( ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule ) SE ) | forRule[null, null] )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==BLOCKQUOTE||LA3_0==CODEBLOCK||LA3_0==FORMATTEXT||LA3_0==HRULE||LA3_0==IMG||LA3_0==LAB||(LA3_0 >= LINK && LA3_0 <= LIST)||LA3_0==OLIST||(LA3_0 >= S1TITLE && LA3_0 <= S5TITLE)||(LA3_0 >= TABLE && LA3_0 <= ULIST)) ) {
				alt3=1;
			}
			else if ( (LA3_0==FOR) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:4: ( ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule ) SE )
					{
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:4: ( ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule ) SE )
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:5: ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule ) SE
					{
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:5: ( titleRule | textDeclRule | blockquoteRule | olistRule | ulistRule | tlistRule | codeBlockRule | tableRule | imageRule | linkRule | listRule[null,null] | formatText | quickLinkRule | horizontalRule )
					int alt2=14;
					switch ( input.LA(1) ) {
					case S1TITLE:
					case S2TITLE:
					case S3TITLE:
					case S4TITLE:
					case S5TITLE:
					case TITLE:
						{
						alt2=1;
						}
						break;
					case TEXT:
						{
						alt2=2;
						}
						break;
					case BLOCKQUOTE:
						{
						alt2=3;
						}
						break;
					case OLIST:
						{
						alt2=4;
						}
						break;
					case ULIST:
						{
						alt2=5;
						}
						break;
					case TLIST:
						{
						alt2=6;
						}
						break;
					case CODEBLOCK:
						{
						alt2=7;
						}
						break;
					case TABLE:
						{
						alt2=8;
						}
						break;
					case IMG:
						{
						alt2=9;
						}
						break;
					case LINK:
						{
						alt2=10;
						}
						break;
					case LIST:
						{
						alt2=11;
						}
						break;
					case FORMATTEXT:
						{
						alt2=12;
						}
						break;
					case LAB:
						{
						alt2=13;
						}
						break;
					case HRULE:
						{
						alt2=14;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}
					switch (alt2) {
						case 1 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:41:6: titleRule
							{
							pushFollow(FOLLOW_titleRule_in_instrRule98);
							titleRule();
							state._fsp--;

							}
							break;
						case 2 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:42:6: textDeclRule
							{
							pushFollow(FOLLOW_textDeclRule_in_instrRule106);
							textDeclRule();
							state._fsp--;

							}
							break;
						case 3 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:43:6: blockquoteRule
							{
							pushFollow(FOLLOW_blockquoteRule_in_instrRule114);
							blockquoteRule();
							state._fsp--;

							}
							break;
						case 4 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:44:6: olistRule
							{
							pushFollow(FOLLOW_olistRule_in_instrRule122);
							olistRule();
							state._fsp--;

							}
							break;
						case 5 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:45:6: ulistRule
							{
							pushFollow(FOLLOW_ulistRule_in_instrRule129);
							ulistRule();
							state._fsp--;

							}
							break;
						case 6 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:46:6: tlistRule
							{
							pushFollow(FOLLOW_tlistRule_in_instrRule137);
							tlistRule();
							state._fsp--;

							}
							break;
						case 7 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:47:6: codeBlockRule
							{
							pushFollow(FOLLOW_codeBlockRule_in_instrRule145);
							codeBlockRule();
							state._fsp--;

							}
							break;
						case 8 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:48:6: tableRule
							{
							pushFollow(FOLLOW_tableRule_in_instrRule153);
							tableRule();
							state._fsp--;

							}
							break;
						case 9 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:49:6: imageRule
							{
							pushFollow(FOLLOW_imageRule_in_instrRule161);
							imageRule();
							state._fsp--;

							}
							break;
						case 10 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:50:6: linkRule
							{
							pushFollow(FOLLOW_linkRule_in_instrRule168);
							linkRule();
							state._fsp--;

							}
							break;
						case 11 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:51:6: listRule[null,null]
							{
							pushFollow(FOLLOW_listRule_in_instrRule176);
							listRule(null, null);
							state._fsp--;

							}
							break;
						case 12 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:52:6: formatText
							{
							pushFollow(FOLLOW_formatText_in_instrRule184);
							formatText();
							state._fsp--;

							}
							break;
						case 13 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:53:5: quickLinkRule
							{
							pushFollow(FOLLOW_quickLinkRule_in_instrRule191);
							quickLinkRule();
							state._fsp--;

							}
							break;
						case 14 :
							// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:54:5: horizontalRule
							{
							pushFollow(FOLLOW_horizontalRule_in_instrRule197);
							horizontalRule();
							state._fsp--;

							}
							break;

					}

					match(input,SE,FOLLOW_SE_in_instrRule203); 
					}

					}
					break;
				case 2 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:55:11: forRule[null, null]
					{
					pushFollow(FOLLOW_forRule_in_instrRule208);
					forRule(null, null);
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "instrRule"



	// $ANTLR start "titleRule"
	// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:60:1: titleRule : t= titleTypeRule STRING ( refRule )? ;
	public final void titleRule() throws RecognitionException {
		Token t =null;

		try {
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:61:2: (t= titleTypeRule STRING ( refRule )? )
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:62:3: t= titleTypeRule STRING ( refRule )?
			{
			pushFollow(FOLLOW_titleTypeRule_in_titleRule229);
			t=titleTypeRule();
			state._fsp--;

			match(input,STRING,FOLLOW_STRING_in_titleRule231); 
			// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:62:26: ( refRule )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==LCB) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:62:26: refRule
					{
					pushFollow(FOLLOW_refRule_in_titleRule233);
					refRule();
					state._fsp--;

					}
					break;

			}

			System.out.println("    - Ho riconosciuto un titolo");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "titleRule"



	// $ANTLR start "titleTypeRule"
	// D:\\Documenti\\malt\\MaltProject\\src\\compilerPackage\\Malt.g:67:1: titleTypeRule returns [Token type] : (t= TITLE |t= S1TITLE |t= S2TITLE |t= S3TITLE |t= S4TITLE |t= S5TITLE ) ;
	public final Token titleTypeRule() throws RecognitionException {
		Token type = null;


		Token t=null;
